# keh-template-repo

./: .gitignore  .markdownlint.yaml  .mega-linter.yml  404.html  LICENSE  Makefile  README.md  index.html  kics.config  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci-docs.yml  ci-fmt.yml  ci-test.yml  deploy-docs.yml  mega-linter.yml
docs/: documentation.md  index.md
documentation/: index.html
search/: search_index.json
